--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<h1>Halaman Utama</h1>
-<button routerLink="/utama">Halaman Utama</button>
-<button routerLink="/autentikasi/login">Login</button>
-<button routerLink="/admin/dashboard">Dashboard</button>
+<!-- Navigation-->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+                <li class="nav-item"><a class="nav-link" routerLink="/utama">Halaman Utama</a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/autentikasi/login">Admin Login</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <router-outlet></router-outlet>
