--- a/src/app/autentikasi/login/login.component.html
+++ b/src/app/autentikasi/login/login.component.html
@@ -1,1 +1,46 @@
-<p>login works!</p>
+<!-- Masthead-->
+<header class="masthead">
+    <div class="container px-4 px-lg-5 h-100">
+        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+            <div class="col-lg-8 align-self-end">
+                <h1 class="text-white font-weight-bold">Halaman Login Admin</h1>
+                <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+                <p class="text-white-75 mb-5">Mohon Inputkan Username dan Password Admin dengan Benar.</p>
+                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                    <div class="col-lg-12">
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- * * SB Forms Contact Form * *-->
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- This form is pre-integrated with SB Forms.-->
+                        <!-- To make this form functional, sign up at-->
+                        <!-- https://startbootstrap.com/solution/contact-forms-->
+                        <!-- to get an API token!-->
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                            <!-- Username input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="usernameUser" type="text" placeholder="Inputkan Username" data-sb-validations="required" />
+                                <label for="usernameUser">Username Admin</label>
+                                <div class="invalid-feedback" data-sb-feedback="usernameUser:required">Username Belum Terisi.</div>
+                            </div>
+                            <!-- Password input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="passwordUser" type="password" placeholder="Inputkan Password" data-sb-validations="required" />
+                                <label for="passwordUser">Password Admin</label>
+                                <div class="invalid-feedback" data-sb-feedback="passwordUser:required">Password Belum Terisi.</div>
+                            </div>
+                            <!-- Submit error message-->
+                            <!---->
+                            <!-- This is what your users will see when there is-->
+                            <!-- an error submitting the form-->
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Gagal Login Admin!</div></div>
+                            <!-- Submit Button-->
+                            <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Submit</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
