--- a/src/app/utama/utama.component.html
+++ b/src/app/utama/utama.component.html
@@ -1,1 +1,72 @@
-<p>utama works!</p>
+<!-- Masthead-->
+<header class="masthead">
+    <div class="container px-4 px-lg-5 h-100">
+        <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
+            <div class="col-lg-8 align-self-end">
+                <h1 class="text-white font-weight-bold">Inputkan NIM Mahasiswa</h1>
+                <hr class="divider" />
+            </div>
+            <div class="col-lg-8 align-self-baseline">
+                <p class="text-white-75 mb-5">Pencarian dilakukan berdasarkan NIM Mahasiswa, jadi mohon untuk menginputkan NIM dengan benar.</p>
+                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                    <div class="col-lg-12">
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- * * SB Forms Contact Form * *-->
+                        <!-- * * * * * * * * * * * * * * *-->
+                        <!-- This form is pre-integrated with SB Forms.-->
+                        <!-- To make this form functional, sign up at-->
+                        <!-- https://startbootstrap.com/solution/contact-forms-->
+                        <!-- to get an API token!-->
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                            <!-- NIM input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="nim" type="text" placeholder="Inputkan NIM" data-sb-validations="required" />
+                                <label for="nim">NIM Mahasiswa</label>
+                                <div class="invalid-feedback" data-sb-feedback="nim:required">NIM Belum Terisi.</div>
+                            </div>
+                            <!-- Submit success message-->
+                            <!---->
+                            <!-- This is what your users will see when the form-->
+                            <!-- has successfully submitted-->
+                            <div class="d-none" id="submitSuccessMessage">
+                                <div class="text-center mb-3">
+                                    <p class="text-white-75 mb-5 mt-5">Berikut data mahasiswa yang dicari!.</p>
+                                </div>
+                                <table class="table table-light">
+                                    <thead>
+                                      <tr>
+                                        <th scope="col">No</th>
+                                        <th scope="col">NIM</th>
+                                        <th scope="col">Nama</th>
+                                        <th scope="col">Angkatan</th>
+                                        <th scope="col">Prodi</th>
+                                        <th scope="col">Fakultas</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <th scope="row">1</th>
+                                        <td>0902</td>
+                                        <td>Aldi</td>
+                                        <td>2017</td>
+                                        <td>Teknik Informatika</td>
+                                        <td>Fakultas Ilmu Komputer</td>
+                                      </tr>
+                                    </tbody>
+                                  </table>
+                                  <a class="btn btn-primary btn-xl" href="">Ulangi Pencarian</a>
+                            </div>
+                            <!-- Submit error message-->
+                            <!---->
+                            <!-- This is what your users will see when there is-->
+                            <!-- an error submitting the form-->
+                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3">Gagal Mencari Mahasiswa!</div></div>
+                            <!-- Submit Button-->
+                            <div class="d-grid"><button class="btn btn-primary btn-xl" id="submitButton" type="submit">Submit</button></div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
